Enhance preprocessing functions for Amharic text analysis    - Improved normalization of character-level mismatches    - Added functionality to remove URLs, English characters, and emojis    - Implemented stopword removal and whitespace trimming

--- a/Amharic_Sentiment_Analyzer_NLP_LSTM.ipynb
+++ b/Amharic_Sentiment_Analyzer_NLP_LSTM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,23 +19,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ሀ/ማርያም: ሀይለ ማርያም\n",
-      "ሃ/ማርያም: ሃይለ ማርያም\n",
-      "ህ/ሰብ: ህብረተሰብ\n",
-      "ህ/ቁ: ህዝባር ቁጥር\n",
-      "ህ/ተሰብ: ህብረተሰብ\n",
-      "ኢዴህሕ: የኢትዮጵያ ዲሞክራሳዊ ሃይሎች ህብረት\n",
-      "አ/አ/ድ: አፍሪካ አንድነት ድርጅት\n",
-      "ሜ/ጄኔራል: ሜጀር ጄኔራል\n",
-      "ብ/ጄ/ል: ብርጋዴል ጄኔራል\n",
-      "ም/ቤቱ: ምክር ቤቱ\n"
+      "ዶ/ር: ዶክተር\n",
+      "ዶር: ዶክተር\n",
+      "ጠ/ሚ: ጠቅላይ ሚኒስቴር\n",
+      "ጠ/ሚኒስትር: ጠቅላይ ሚኒስትር\n",
+      "ጠ/ሚኒስትርነት: ጠቅላይ ሚኒስትርነት\n",
+      "ጠ/ፍ/ቤት: ጠቅላይ ፍርድ ቤት\n",
+      "ፌ/ም/ቤት: ፌደራል ምክር ቤት\n",
+      "ፍ/ቤቱ: ፍርድ ቤቱ\n",
+      "ፍ/ቤት: ፍርድ ቤት\n",
+      "ፕ/ት: ፕሬዚዳንት\n"
      ]
     }
    ],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
        "['ሰሞን', 'ወዲያ', 'ጋር', 'የእሷ', 'ወይስ', 'እናንተ', 'እኔ', 'እየኖርኩ', 'እንዴት', 'ት']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,19 +66,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                               tweet sentiment\n",
-      "0             ልዩ የተፈጥሮ ገፅታ *****የምስራቅ አፍሪካ የውሃ ማማ ጮቄ   neutral\n",
-      "1  @bobomaheder Global citizenንነቴ እና ኢትዮጵያዊነቴ ተምታ...   neutral\n",
-      "2  RT @TechinEthiopia: ሐሴትን ከበጎነት !!! የሰው ልጅ በምድር...     mixed\n",
-      "3  ለቅዳሚታችሁ 💚💛❤ አሁን በምትሰሩት ማንኛውም ነገር ምሉእነትና እርካታ ይ...   neutral\n",
-      "4  @tesfamaryam21 40/60 ኮንዶሚኒየም ከሆነ እመልሳለሁ ካልሆነ መ...   neutral\n",
+      "ልዩ የተፈጥሮ ገፅታ *****የምስራቅ አፍሪካ የውሃ ማማ ጮቄ            \n",
+      "@bobomaheder Global citizenንነቴ እና ኢትዮጵያዊነቴ ተምታተውብኝ አያውቁም የሚል ይታከልበት 😉\n",
+      "RT @TechinEthiopia: ሐሴትን ከበጎነት !!! የሰው ልጅ በምድር ሲመላለስ ታላቅ የመንፈስ እርካታን ከሚያጎናፅፉት ተግባራት መካከል አንዱ ለተቸገረ መድህን፤ ለወገንም አለኝታ መሆን ሲችል እንደሆነ ብዙዎቻችንን…\n",
+      "ለቅዳሚታችሁ 💚💛❤ አሁን በምትሰሩት ማንኛውም ነገር ምሉእነትና እርካታ ይሰማችሁ! የአሁንነት ሀይል -ለመንፈሳዊ የእውቀት ብርሃን መመሪያ በኤክሀርት ቶሌየተዘጋጀ መጽሐፍ ነው። https://t.co/RTi8kKKrd0 https://t.co/4YTikE0Amc\n",
+      "@tesfamaryam21 40/60 ኮንዶሚኒየም ከሆነ እመልሳለሁ ካልሆነ መልሴን አላባክንም!\n",
+      "@Jeberara1 ስንታየሁም ሆነ ኤልያስ ፓርላማ ለመግባት ምን ያንሳቸዋል??? ደግሞ ሁለት ሰው ብቻ ይዞ ፓርቲ ይመሰረታል ያለህ ማነው? መቸም በእስክንድር ላይ በየምክኒያቱ ዱላ የማያነሳ የለም?! በመርህ የሚመራ አንድ ፅኑ ሰው ቢኖር አልቆም አላስቀምጥ አላችሁት።\n",
+      "@woldeyes_t Tesfaye ለካስ ጭብል ለብሰሽ የፕሮፌሰርን ፎቶ ለጥፈክ እልም ያልክ ባዳ ነክ እፈር ትንሽ\n",
+      "ታኅሣሥ 10 ቀን 2012 በሞጣ ከተማ አስተዳደር በመስጅዶችና ሱቆች ላይ የደረሰውን የእሳት ቃጠሎ በማውገዝ የእስልምና ሃይማኖት ተከታዮች በባሕር ዳር ሠላማዊ ሠልፍ እያካሄዱ ይገኛሉ፡፡ #Ethiopia #EthioMuslim https://t.co/bd5u0Rutn4\n",
+      "አሜሪካ ሱሌይማኒን በመግደል ቀይ መስመሩን ሳታልፍ አይቀርም። ዜጎቿ አገሪቱን ለቀው እንዲወጡ አዝዛለች። ጀለሶቿ ደግሞ restrain እና de-escalate እያሉ መለማመጥ ጀምረዋል።\n",
+      "@haset_haset7 ይሄው ነው አይደል የእውቀትሽ ጥግ....በሰሚ ሰሚ ከምትናገሪ ለምን ታሪክ አታነቢም....ደሞ ራስሽን አታስገምቺ\n",
       "\n",
       " Number of rows in the dataset: 17352\n"
      ]
@@ -89,7 +93,8 @@
     "\n",
     "data = pd.read_csv(os.path.join('data', 'dataset.csv'))\n",
     "\n",
-    "print(data.head(5))\n",
+    "for tweet in data['tweet'].head(10):\n",
+    "    print(tweet.ljust(50))\n",
     "\n",
     "rows, columns = data.shape\n",
     "\n",
@@ -101,6 +106,329 @@
    "metadata": {},
    "source": [
     "### Short Form Expansion and Character Level Normalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "def normalize_char_level_missmatch(input_token):\n",
+    "    \"\"\"\n",
+    "    Normalizes character-level mismatches in Amharic text.\n",
+    "\n",
+    "    Parameters:\n",
+    "        input_token (str): The Amharic text to normalize.\n",
+    "\n",
+    "    Returns:\n",
+    "        str: The normalized text.\n",
+    "    \"\"\"\n",
+    "    rep1 = re.sub('[ሃኅኃሐሓኻ]', 'ሀ', input_token)\n",
+    "    rep2 = re.sub('[ሑኁዅ]', 'ሁ', rep1)\n",
+    "    rep3 = re.sub('[ኂሒኺ]', 'ሂ', rep2)\n",
+    "    rep4 = re.sub('[ኌሔዄ]', 'ሄ', rep3)\n",
+    "    rep5 = re.sub('[ሕኅ]', 'ህ', rep4)\n",
+    "    rep6 = re.sub('[ኆሖኾ]', 'ሆ', rep5)\n",
+    "    rep7 = re.sub('[ሠ]', 'ሰ', rep6)\n",
+    "    rep8 = re.sub('[ሡ]', 'ሱ', rep7)\n",
+    "    rep9 = re.sub('[ሢ]', 'ሲ', rep8)\n",
+    "    rep10 = re.sub('[ሣ]', 'ሳ', rep9)\n",
+    "    rep11 = re.sub('[ሤ]', 'ሴ', rep10)\n",
+    "    rep12 = re.sub('[ሥ]', 'ስ', rep11)\n",
+    "    rep13 = re.sub('[ሦ]', 'ሶ', rep12)\n",
+    "    rep14 = re.sub('[ዓኣዐ]', 'አ', rep13)\n",
+    "    rep15 = re.sub('[ዑ]', 'ኡ', rep14)\n",
+    "    rep16 = re.sub('[ዒ]', 'ኢ', rep15)\n",
+    "    rep17 = re.sub('[ዔ]', 'ኤ', rep16)\n",
+    "    rep18 = re.sub('[ዕ]', 'እ', rep17)\n",
+    "    rep19 = re.sub('[ዖ]', 'ኦ', rep18)\n",
+    "    rep20 = re.sub('[ጸ]', 'ፀ', rep19)\n",
+    "    rep21 = re.sub('[ጹ]', 'ፁ', rep20)\n",
+    "    rep22 = re.sub('[ጺ]', 'ፂ', rep21)\n",
+    "    rep23 = re.sub('[ጻ]', 'ፃ', rep22)\n",
+    "    rep24 = re.sub('[ጼ]', 'ፄ', rep23)\n",
+    "    rep25 = re.sub('[ጽ]', 'ፅ', rep24)\n",
+    "    rep26 = re.sub('[ጾ]', 'ፆ', rep25)\n",
+    "    rep27 = re.sub('(ሉ[ዋአ])', 'ሏ', rep26)\n",
+    "    rep28 = re.sub('(ሙ[ዋአ])', 'ሟ', rep27)\n",
+    "    rep29 = re.sub('(ቱ[ዋአ])', 'ቷ', rep28)\n",
+    "    rep30 = re.sub('(ሩ[ዋአ])', 'ሯ', rep29)\n",
+    "    rep31 = re.sub('(ሱ[ዋአ])', 'ሷ', rep30)\n",
+    "    rep32 = re.sub('(ሹ[ዋአ])', 'ሿ', rep31)\n",
+    "    rep33 = re.sub('(ቁ[ዋአ])', 'ቋ', rep32)\n",
+    "    rep34 = re.sub('(ቡ[ዋአ])', 'ቧ', rep33)\n",
+    "    rep35 = re.sub('(ቹ[ዋአ])', 'ቿ', rep34)\n",
+    "    rep36 = re.sub('(ሁ[ዋአ])', 'ኋ', rep35)\n",
+    "    rep37 = re.sub('(ኑ[ዋአ])', 'ኗ', rep36)\n",
+    "    rep38 = re.sub('(ኙ[ዋአ])', 'ኟ', rep37)\n",
+    "    rep39 = re.sub('(ኩ[ዋአ])', 'ኳ', rep38)\n",
+    "    rep40 = re.sub('(ዙ[ዋአ])', 'ዟ', rep39)\n",
+    "    rep41 = re.sub('(ጉ[ዋአ])', 'ጓ', rep40)\n",
+    "    rep42 = re.sub('(ደ[ዋአ])', 'ዷ', rep41)\n",
+    "    rep43 = re.sub('(ጡ[ዋአ])', 'ጧ', rep42)\n",
+    "    rep44 = re.sub('(ጩ[ዋአ])', 'ጯ', rep43)\n",
+    "    rep45 = re.sub('(ጹ[ዋአ])', 'ጿ', rep44)\n",
+    "    rep46 = re.sub('(ፉ[ዋአ])', 'ፏ', rep45)\n",
+    "    rep47 = re.sub('[ቊ]', 'ቁ', rep46)\n",
+    "    rep48 = re.sub('[ኵ]', 'ኩ', rep47)\n",
+    "    return rep48"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def expand_short_form(input_short_word):\n",
+    "    \"\"\"\n",
+    "    Expands abbreviations in Amharic text using a provided dictionary.\n",
+    "\n",
+    "    Parameters:\n",
+    "        input_short_word (str): The word to expand.\n",
+    "        short_form_dict (dict): A dictionary with abbreviations as keys and their expansions as values.\n",
+    "\n",
+    "    Returns:\n",
+    "        str: The expanded word if found in the dictionary, otherwise the original word.\n",
+    "    \"\"\"\n",
+    "    return abbreviations.get(input_short_word, input_short_word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_english(text):\n",
+    "    \"\"\"\n",
+    "    Removes English characters from a given text.\n",
+    "\n",
+    "    Parameters:\n",
+    "        text (str): The input text.\n",
+    "\n",
+    "    Returns:\n",
+    "        str: The text with English characters removed.\n",
+    "    \"\"\"\n",
+    "    if isinstance(text, str):\n",
+    "        return re.sub(r'[a-zA-Z]', '', text)\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_punc_and_special_chars(text): \n",
+    "    \"\"\"\n",
+    "    Removes punctuation and special characters from a given text.\n",
+    "\n",
+    "    Parameters:\n",
+    "        text (str): The input text.\n",
+    "\n",
+    "    Returns:\n",
+    "        str: The text with punctuation and special characters removed.\n",
+    "    \"\"\"\n",
+    "    normalized_text = re.sub(r'[!@#\\$%\\^\\«\\»&\\*\\(\\)…\\[\\]\\{\\};“”›’‘\"\\':,.\\‹/\\<\\>\\?\\\\|\\`\\´~\\-=+\\፡።፤;፦፥፧፨፠፣_]', '', text)\n",
+    "    return normalized_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "def remove_ascii_and_numbers(text_input):\n",
+    "    \"\"\"\n",
+    "    Removes all ASCII characters, English numbers, and Amharic/Arabic numbers from the input text.\n",
+    "\n",
+    "    Parameters:\n",
+    "        text_input (str): The input text to process.\n",
+    "\n",
+    "    Returns:\n",
+    "        str: The text with ASCII characters and numbers removed.\n",
+    "    \n",
+    "    Notes:\n",
+    "        - ASCII characters include all English letters (A-Z, a-z) and digits (0-9).\n",
+    "        - Amharic/Arabic numbers are removed based on their Unicode range (U+1369 to U+137C).\n",
+    "        - This function is helpful for preprocessing text where only specific non-numeric and non-ASCII \n",
+    "          characters (e.g., Amharic script) are required.\n",
+    "    \"\"\"\n",
+    "    rm_num_and_ascii = re.sub('[A-Za-z0-9]', '', text_input)\n",
+    "    \n",
+    "    cleaned_text = re.sub('[\\u1369-\\u137C]+', '', rm_num_and_ascii)\n",
+    "    \n",
+    "    return cleaned_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_whitespace(text):\n",
+    "    \"\"\"\n",
+    "    Removes whitespace from the start and end of the given text.\n",
+    "\n",
+    "    Parameters:\n",
+    "        text (str): The input text.\n",
+    "\n",
+    "    Returns:\n",
+    "        str: The trimmed text with no leading or trailing whitespace.\n",
+    "    \"\"\"\n",
+    "    return text.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_urls(text):\n",
+    "    \"\"\"\n",
+    "    Removes URLs, including shortened links like 'https://t.co/...', from the input text.\n",
+    "\n",
+    "    Parameters:\n",
+    "        text (str): The input text to process.\n",
+    "\n",
+    "    Returns:\n",
+    "        str: The text with URLs removed.\n",
+    "    \"\"\"\n",
+    "    url_pattern = r'https?://\\S+|www\\.\\S+'\n",
+    "    \n",
+    "    cleaned_text = re.sub(url_pattern, '', text)\n",
+    "    \n",
+    "    return cleaned_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_stopwords(text):\n",
+    "    \"\"\"\n",
+    "    Removes stopwords from the text.\n",
+    "\n",
+    "    Parameters:\n",
+    "        text (str): The input text.\n",
+    "        stopwords (list): A list of stopwords.\n",
+    "\n",
+    "    Returns:\n",
+    "        str: The text without stopwords.\n",
+    "    \"\"\"\n",
+    "    tokens = text.split()\n",
+    "    filtered_tokens = [word for word in tokens if word not in stopwords]\n",
+    "    return ' '.join(filtered_tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "def remove_emojis(text):\n",
+    "    \"\"\"\n",
+    "    Removes emojis from the input text.\n",
+    "\n",
+    "    Parameters:\n",
+    "        text (str): The input text.\n",
+    "\n",
+    "    Returns:\n",
+    "        str: The text with emojis removed.\n",
+    "    \"\"\"\n",
+    "    emoji_pattern = re.compile(\"[\\U0001F600-\\U0001F64F\"  # emotions\n",
+    "                                 \"\\U0001F300-\\U0001F5FF\"  # symbols & pictographs\n",
+    "                                 \"\\U0001F680-\\U0001F6FF\"  # transport & map symbols\n",
+    "                                 \"\\U0001F700-\\U0001F77F\"  # alchemical symbols\n",
+    "                                 \"\\U0001F780-\\U0001F7FF\"  # Geometric Shapes Extended\n",
+    "                                 \"\\U0001F800-\\U0001F8FF\"  # Supplemental Arrows-C\n",
+    "                                 \"\\U0001F900-\\U0001F9FF\"  # Supplemental Symbols and Pictographs\n",
+    "                                 \"\\U0001FA00-\\U0001FA6F\"  # Chess Symbols\n",
+    "                                 \"\\U00002702-\\U000027B0\"  # Dingbats\n",
+    "                                 \"]+\", flags=re.UNICODE)\n",
+    "    return emoji_pattern.sub(r'', text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean_amharic_text(text):\n",
+    "    \"\"\"\n",
+    "    Cleans the given Amharic text by applying various preprocessing steps.\n",
+    "\n",
+    "    Parameters:\n",
+    "        text (str): The input Amharic text to clean.\n",
+    "\n",
+    "    Returns:\n",
+    "        str: The cleaned text after applying all preprocessing steps.\n",
+    "    \"\"\"\n",
+    "    text = remove_urls(text)\n",
+    "    text = remove_english(text)\n",
+    "    text = remove_emojis(text)\n",
+    "    text = remove_ascii_and_numbers(text)\n",
+    "    text = remove_punc_and_special_chars(text)\n",
+    "    text = normalize_char_level_missmatch(text)\n",
+    "    text = expand_short_form(text)\n",
+    "    text = remove_stopwords(text)\n",
+    "    text = remove_whitespace(text)\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['cleaned_tweet'] = data['tweet'].apply(clean_amharic_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "First 10 cleaned tweets:\n",
+      "0. ልዩ የተፈጥሮ ገፅታ የምስራቅ አፍሪካ የውሀ ማማ ጮቄ                 \n",
+      "1. ኢትዮጵያዊነቴ ተምታተውብኝ አያውቁም የሚል ይታከልበት                 \n",
+      "2. ሀሴትን ከበጎነት የሰው ልጅ በምድር ሲመላለስ ታላቅ የመንፈስ እርካታን ከሚያጎናፅፉት ተግባራት አንዱ ለተቸገረ መድህን ለወገንም አለኝታ መሆን ሲችል ብዙዎቻችንን\n",
+      "3. ለቅዳሚታችሁ በምትሰሩት ማንኛውም ነገር ምሉእነትና እርካታ ይሰማችሁ የአሁንነት ሀይል ለመንፈሳዊ የእውቀት ብርሀን መመሪያ በኤክሀርት ቶሌየተዘጋጀ መፅሀፍ\n",
+      "4. ኮንዶሚኒየም ከሆነ እመልሳለሁ ካልሆነ መልሴን አላባክንም               \n",
+      "5. ስንታየሁም ኤልያስ ፓርላማ ለመግባት ያንሳቸዋል ደግሞ ሁለት ሰው ይዞ ፓርቲ ይመሰረታል ያለህ ማነው መቸም በእስክንድር በየምክኒያቱ ዱላ የማያነሳ የለም በመርህ የሚመራ ፅኑ ሰው ቢኖር አልቆም አላስቀምጥ አላችሁት\n",
+      "6. ለካስ ጭብል ለብሰሽ የፕሮፌሰርን ፎቶ ለጥፈክ እልም ያልክ ባዳ ነክ እፈር    \n",
+      "7. ታሀሳስ ቀን በሞጣ ከተማ አስተዳደር በመስጅዶችና ሱቆች የደረሰውን የእሳት ቃጠሎ በማውገዝ የእስልምና ሀይማኖት ተከታዮች በባህር ሰላማዊ ሰልፍ እያካሄዱ ይገኛሉ\n",
+      "8. አሜሪካ ሱሌይማኒን በመግደል ቀይ መስመሩን ሳታልፍ አይቀርም ዜጎቿ አገሪቱን ለቀው እንዲወጡ አዝዛለች ጀለሶቿ ደግሞ እያሉ መለማመጥ ጀምረዋል\n",
+      "9. ይሄው አይደል የእውቀትሽ ጥግበሰሚ ሰሚ ከምትናገሪ ታሪክ አታነቢምደሞ ራስሽን አታስገምቺ\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\nFirst 10 cleaned tweets:\")\n",
+    "for index, tweet in enumerate(data['cleaned_tweet'].head(10)):\n",
+    "    print(f\"{index}. {tweet.ljust(50)}\")"
    ]
   }
  ],
