--- a/notebooks/Amharic_Text_Preprocessing.ipynb
+++ b/notebooks/Amharic_Text_Preprocessing.ipynb
@@ -802,7 +802,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "filtered_df = data[['cleaned_tweet', 'label']]\n",
+    "\n",
+    "output_folder = 'data'\n",
+    "output_file = f'{output_folder}/cleaned_dataset.csv'\n",
+    "\n",
+    "os.makedirs(output_folder, exist_ok=True)\n",
+    "\n",
+    "filtered_df.to_csv(output_file, index=False, encoding='utf-8')\n",
+    "\n",
+    "print(f\"Filtered data saved to {output_file}\")"
+   ]
   }
  ],
  "metadata": {
